# unport

./: Cargo.toml  README.md  tarpaulin-report.json
.github/workflows/: coverage.yml
docs/plans/: 2025-12-03-unport-design.md
scripts/: publish.sh
src/: client.rs  daemon.rs  detect.rs  lib.rs  main.rs  proxy.rs  tls.rs  types.rs
tests/: client_tests.rs  daemon_tests.rs  process_tests.rs  tls_tests.rs  types_tests.rs
